--- a/client/src/components/notes/NoteTimeline.module.css
+++ b/client/src/components/notes/NoteTimeline.module.css
@@ -26,9 +26,6 @@
 
 .dateGroup {
     margin-bottom: 0;
-    content-visibility: auto;
-    contain: layout paint style;
-    contain-intrinsic-size: 320px;
 }
 
 .dateHeader {
